轻量级锁或者偏向锁出现锁竞争膨胀为重量级锁